# xhy-flash-attention

./: .gitignore  .gitmodules
csrc/: CMakeLists orin.txt  CMakeLists.txt
csrc/capi/: flash_attn.cu
csrc/flash_attn/src/: cuda_utils.h  flash_bwd_kernel.h  flash_fwd_kernel.h
csrc/flash_attn_v3/: combine.h  cuda_utils.cu  cuda_utils.h  epilogue_bwd_sm90_tma.hpp  epilogue_fwd_sm90_tma.hpp  flash.h  flash_api.cu  flash_api.h  flash_bwd_kernel.h  flash_bwd_kernel_sm90.h  flash_bwd_launch_template.h  flash_bwd_postprocess_kernel.h  flash_bwd_preprocess_kernel.h  flash_fwd_kernel.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_mask.hpp  generate_kernels.py  kernel_traits.h  mainloop_bwd_sm80.hpp  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  named_barrier.hpp  seq_len.h  softmax.h  static_switch.h  tile_scheduler.hpp  tile_scheduler_bwd.hpp  utils.h
csrc/flashmask_v2/: epilogue_bwd.hpp  flash.h  flash_api.cu  flash_api.h  flash_bwd_kernel_sm90.h  flash_bwd_launch_template.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_mask.hpp  flash_prepare_scheduler.cu  generate_kernels.py  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  named_barrier.hpp  print_val.cu  static_switch.h  tile_scheduler.hpp  tile_size.h  utils.h
flash_attn/: flash_attn_interface.py
